src/objects/FeeTable__c.object
<CustomObject>
    <description>List of All Fees across Boards</description>
    <fields>
        <fullName>Account_Code__c</fullName>
        <description>Account Code</description>
        <label>Account Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Account Number</description>
        <label>Account Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Additional_Fee__c</fullName>
        <description>If configured, additional Transaction Fee will be attached to the Parent fee</description>
        <label>Add Additional Fee</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FEE-OIT-TRANS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Fee Amount</description>
        <label>Amount</label>
        <precision>11</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Board__c</fullName>
        <description>Board</description>
        <label>Board</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Architects Board</fullName>
                </value>
                <value>
                    <fullName>Accountancy Board</fullName>
                </value>
                <value>
                    <fullName>Board of Embalmers and Funeral Directors</fullName>
                </value>
                <value>
                    <fullName>Engineers and Surveyors Board</fullName>
                </value>
                <value>
                    <fullName>Board of Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Casino Control Commission</fullName>
                </value>
                <value>
                    <fullName>Chemical Dependency Professionals Board</fullName>
                </value>
                <value>
                    <fullName>Chiropractic Board</fullName>
                </value>
                <value>
                    <fullName>Cosmetology and Barber Board</fullName>
                </value>
                <value>
                    <fullName>Counselor, Social Worker &amp; MFT Board</fullName>
                </value>
                <value>
                    <fullName>Dental Board</fullName>
                </value>
                <value>
                    <fullName>Dept of Commerce Manufactured Homes</fullName>
                </value>
                <value>
                    <fullName>Medical Board</fullName>
                </value>
                <value>
                    <fullName>Motor Vehicle Repair Board</fullName>
                </value>
                <value>
                    <fullName>Nursing Board</fullName>
                </value>
                <value>
                    <fullName>Vision Professionals Board</fullName>
                </value>
                <value>
                    <fullName>OTPTAT Board</fullName>
                </value>
                <value>
                    <fullName>Psychology Board</fullName>
                </value>
                <value>
                    <fullName>ODH Sanitarian Registration</fullName>
                </value>
                <value>
                    <fullName>Speech and Hearing Professionals Board</fullName>
                </value>
                <value>
                    <fullName>Veterinary Medical Board</fullName>
                </value>
                <value>
                    <fullName>Sanitarian Board</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <description>Fee Expiry Date</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Type__c</fullName>
        <description>Fee Name on the Cart</description>
        <label>Fee Name on the Cart</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Status_Field_API_Name__c</fullName>
        <description>Parent Status Field API Name</description>
        <label>Parent Status Field API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Name__c</fullName>
        <description>Rules Name referenced from Rules Engine to generate Fees</description>
        <label>Rule Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_value_Before_Fee_Generation__c</fullName>
        <description>Status value Before Fee Generation</description>
        <label>Status value Before Fee Generation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Fee Table</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Board__c</columns>
        <columns>Fee_Type__c</columns>
        <columns>Amount__c</columns>
        <columns>Add_Additional_Fee__c</columns>
        <columns>Account_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Fees</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Board__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Fee_Expiration_Config</fullName>
        <columns>NAME</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Status_value_Before_Fee_Generation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Expiry_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Fee Expiration Config</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>License_Assignment_Queue_FeeTable</fullName>
        <filterScope>Queue</filterScope>
        <label>License Assignment Queue</label>
        <queue>License_Assignment_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Fee Table ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee Table</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Fee_Table_ID_should_not_be_modified</fullName>
        <active>true</active>
        <description>Fee Table ID should not be modified</description>
        <errorConditionFormula>NOT(CONTAINS($Profile.Name , $Label.Str_System_Administrator)) &amp;&amp; 
PRIORVALUE(Name) != null &amp;&amp; 
ISCHANGED(Name)</errorConditionFormula>
        <errorMessage>Fee Table ID should not be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unique_check_for_Fee_Table_ID</fullName>
        <active>true</active>
        <errorConditionFormula>and(
    Name = VLOOKUP
       ($ObjectType.FeeTable__c.Fields.Name , $ObjectType.FeeTable__c.Fields.Name, Name ),

    not(
     Id=VLOOKUP
         ($ObjectType.FeeTable__c.Fields.Id , $ObjectType.FeeTable__c.Fields.Name, Name )))</errorConditionFormula>
        <errorMessage>Fee Table ID must be unique</errorMessage>
    </validationRules>
</CustomObject>